package ucf.assignments;

public class ToDoItem {
    public boolean complete;
    public String desc;
    public String date;
}

