@startuml
'https://plantuml.com/class-diagram

class ToDoList {
    + main()
    + start()
}

class ToDoItem {
    - desc: String
    - date: String
    - complete: boolean
}

class ToDoListController {
    - list: List<ToDoItem>
    - savedList: List<ToDoItem>
    - textOutput: TextField
    - textDesc: TextField
    - textDate: TextField
    - textComplete: TextField
    - listDisplay: ListView<String>

    + addItemButtonClicked()
    + removeItemButtonClicked()
    + editDescriptionButtonClicked()
    + editDueDateButtonClicked()
    + markItemCompleteButtonClicked()
    + displayAllItemsButtonClicked()
    + displayIncompleteButtonClicked()
    + displayCompletionsButtonClicked()
    + saveItemsButtonClicked()
    + loadListButtonClicked()
    + clearListButtonClicked()

    + addItem()
    + removeItem()
    + clearList()
    + editDescription()
    + editDueDate()
    + markItemComplete()
    + displayAllItems()
    + displayIncomplete()
    + displayCompletions()
    + saveItems()
    + loadList()
    + getText(TextField t)
    + setTextOutput(String text)
    + clearText(TextField t)
    + getDesc(TextField t)
    + getDate(TextField t)
    + getComplete(TextField t)
    + validateDesc()
    + validateDate()
    + validateComplete()
    + listToString(int i)
    + displayList(List<ToDoItem> list)

}

class ToDoListControllerTest {
    + addItemTest()
    + removeItemTest()
    + clearListTest()
    + editDescriptionTest()
    + editDueDateTest()
    + markItemCompleteTest()
    + displayAllItemsTest()
    + displayIncompleteTest()
    + displayCompletionsTest()
    + saveItemsTest()
    + loadListTest()
    + getTextTest()
    + setTextOutputTest()
    + clearTextTest()
    + getDescTest()
    + getDateTest()
    + getCompleteTest()
    + validateDescTest()
    + validateDateTest()
    + validateCompleteTest()
    + listDisplayTest()
}

javafx.Application <|-- ToDoList

ToDoList - ToDoListController

ToDoListController - ToDoListControllerTest

ToDoListController *-- ToDoItem

@enduml